# django-amazon-ses

./: .gitignore  .travis.yml  CHANGELOG.rst  LICENSE.txt  MANIFEST.in  README.rst  django_amazon_ses.py  setup.cfg  setup.py  tox.ini
.github/workflows/: continuous_integration.yml  release.yml
django_amazon_ses/backends/: boto.py
tests/: test_boto.py
