[metadata]
name = django-amazon-ses
version = 4.0.1
description = A Django email backend that uses Boto3 to interact with Amazon Simple Email Service (SES).
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/azavea/django-amazon-ses
author = Hector Castro
author_email = hcastro@azavea.com
license = Apache License 2.0
license_file = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 2.2
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords =
    amazon
    django
    email
    ses

[options]
py_modules = django_amazon_ses
python_requires = >=3.7
install_requires =
    boto3 >=1.3.0
    Django >=2.2
